@@ -28,10 +28,8 @@ import org.openrewrite.text.PlainText;
 import org.openrewrite.text.PlainTextVisitor;
 
 import java.net.URI;
-import java.nio.file.Paths;
-import java.util.Collections;
+import java.nio.file.Path;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import static java.util.Collections.emptyList;
@@ -67,7 +65,7 @@ class DeclarativeRecipeTest implements RewriteTest {
               dr.addUninitialized(
                 new ChangeText("3")
               );
-              dr.initialize(List.of(), Map.of());
+              dr.initialize(List.of());
               spec.recipe(dr);
           },
           text("1", "3"),
@@ -96,7 +94,7 @@ class DeclarativeRecipeTest implements RewriteTest {
         dr.addUninitialized(
           new ChangeText("3")
         );
-        dr.initialize(List.of(), Map.of());
+        dr.initialize(List.of());
         assertThat(dr.getDescriptor().getRecipeList())
           .hasSize(3) // precondition + 2 recipes with options
           .flatExtracting(RecipeDescriptor::getOptions)
@@ -183,21 +181,21 @@ class DeclarativeRecipeTest implements RewriteTest {
         rewriteRun(
           spec -> spec.recipeFromYaml(
             """
-            type: specs.openrewrite.org/v1beta/recipe
-            name: org.openrewrite.PreconditionTest
-            description: Test.
-            preconditions:
-              - org.openrewrite.DeclarativePrecondition
-            recipeList:
-              - org.openrewrite.text.ChangeText:
-                 toText: 3
-            ---
-            type: specs.openrewrite.org/v1beta/recipe
-            name: org.openrewrite.DeclarativePrecondition
-            recipeList:
-              - org.openrewrite.text.Find:
-                  find: 1
-            """,
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.PreconditionTest
+              description: Test.
+              preconditions:
+                - org.openrewrite.DeclarativePrecondition
+              recipeList:
+                - org.openrewrite.text.ChangeText:
+                   toText: 3
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.DeclarativePrecondition
+              recipeList:
+                - org.openrewrite.text.Find:
+                    find: 1
+              """,
             "org.openrewrite.PreconditionTest"
           ),
           text("1", "3"),
@@ -257,7 +255,7 @@ class DeclarativeRecipeTest implements RewriteTest {
               s -> {
                   //noinspection DataFlowIssue
                   assertThat(s.getAfter()).isNotNull();
-                  assertThat(s.getAfter().getSourcePath()).isEqualTo(Paths.get("test.txt"));
+                  assertThat(s.getAfter().getSourcePath()).isEqualTo(Path.of("test.txt"));
               }
             ))
             .expectedCyclesThatMakeChanges(1),
@@ -269,18 +267,18 @@ class DeclarativeRecipeTest implements RewriteTest {
     void scanningPreconditionMet() {
         rewriteRun(
           spec -> spec.recipeFromYaml("""
-              ---
-              type: specs.openrewrite.org/v1beta/recipe
-              name: org.openrewrite.ScanningPreconditionTest
-              description: Test.
-              preconditions:
-                - org.openrewrite.search.RepositoryContainsFile:
-                    filePattern: sam.txt
-              recipeList:
-                - org.openrewrite.text.FindAndReplace:
-                    find: foo
-                    replace: bar
-              """, "org.openrewrite.ScanningPreconditionTest"),
+            ---
+            type: specs.openrewrite.org/v1beta/recipe
+            name: org.openrewrite.ScanningPreconditionTest
+            description: Test.
+            preconditions:
+              - org.openrewrite.search.RepositoryContainsFile:
+                  filePattern: sam.txt
+            recipeList:
+              - org.openrewrite.text.FindAndReplace:
+                  find: foo
+                  replace: bar
+            """, "org.openrewrite.ScanningPreconditionTest"),
           text("sam", spec -> spec.path("sam.txt")),
           text("foo", "bar")
         );
@@ -290,18 +288,18 @@ class DeclarativeRecipeTest implements RewriteTest {
     void scanningPreconditionNotMet() {
         rewriteRun(
           spec -> spec.recipeFromYaml("""
-              ---
-              type: specs.openrewrite.org/v1beta/recipe
-              name: org.openrewrite.ScanningPreconditionTest
-              description: Test.
-              preconditions:
-                - org.openrewrite.search.RepositoryContainsFile:
-                    filePattern: sam.txt
-              recipeList:
-                - org.openrewrite.text.FindAndReplace:
-                    find: foo
-                    replace: bar
-              """, "org.openrewrite.ScanningPreconditionTest"),
+            ---
+            type: specs.openrewrite.org/v1beta/recipe
+            name: org.openrewrite.ScanningPreconditionTest
+            description: Test.
+            preconditions:
+              - org.openrewrite.search.RepositoryContainsFile:
+                  filePattern: sam.txt
+            recipeList:
+              - org.openrewrite.text.FindAndReplace:
+                  find: foo
+                  replace: bar
+            """, "org.openrewrite.ScanningPreconditionTest"),
           text("foo")
         );
     }
@@ -310,24 +308,24 @@ class DeclarativeRecipeTest implements RewriteTest {
     void preconditionOnNestedDeclarative() {
         rewriteRun(
           spec -> spec.recipeFromYaml("""
-              ---
-              type: specs.openrewrite.org/v1beta/recipe
-              name: org.openrewrite.PreconditionOnDeclarative
-              description: Test.
-              preconditions:
-                - org.openrewrite.text.Find:
-                    find: foo
-              recipeList:
-                - org.openrewrite.DeclarativeExample
-              ---
-              type: specs.openrewrite.org/v1beta/recipe
-              name: org.openrewrite.DeclarativeExample
-              description: Test.
-              recipeList:
-                - org.openrewrite.text.FindAndReplace:
-                    find: foo
-                    replace: bar
-              """, "org.openrewrite.PreconditionOnDeclarative"),
+            ---
+            type: specs.openrewrite.org/v1beta/recipe
+            name: org.openrewrite.PreconditionOnDeclarative
+            description: Test.
+            preconditions:
+              - org.openrewrite.text.Find:
+                  find: foo
+            recipeList:
+              - org.openrewrite.DeclarativeExample
+            ---
+            type: specs.openrewrite.org/v1beta/recipe
+            name: org.openrewrite.DeclarativeExample
+            description: Test.
+            recipeList:
+              - org.openrewrite.text.FindAndReplace:
+                  find: foo
+                  replace: bar
+            """, "org.openrewrite.PreconditionOnDeclarative"),
           text("foo", "bar")
         );
     }
@@ -335,9 +333,9 @@ class DeclarativeRecipeTest implements RewriteTest {
     @Test
     void exposesUnderlyingDataTables() {
         DeclarativeRecipe dr = new DeclarativeRecipe("org.openrewrite.DeclarativeDataTable", "declarative with data table",
-          "test", emptySet(), null, URI.create("dummy"), true, Collections.emptyList());
+          "test", emptySet(), null, URI.create("dummy"), true, emptyList());
         dr.addUninitialized(new Find("sam", null, null, null, null, null, null, null));
-        dr.initialize(List.of(), Map.of());
+        dr.initialize(List.of());
         assertThat(dr.getDataTableDescriptors()).anyMatch(it -> "org.openrewrite.table.TextMatches".equals(it.getName()));
     }
 
@@ -378,8 +376,8 @@ class DeclarativeRecipeTest implements RewriteTest {
         assertThat(cycleCount).hasValue(3);
     }
 
-    @Value
     @EqualsAndHashCode(callSuper = false)
+    @Value
     static class MaxCycles extends Recipe {
         int maxCycles;
         List<Recipe> recipeList;
@@ -400,8 +398,8 @@ class DeclarativeRecipeTest implements RewriteTest {
         }
     }
 
-    @Value
     @EqualsAndHashCode(callSuper = false)
+    @Value
     static class RepeatedFindAndReplace extends Recipe {
         String find;
         String replace;
