@@ -23,6 +23,9 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.openrewrite.*;
+import org.openrewrite.groovy.tree.G;
+import org.openrewrite.java.JavaIsoVisitor;
+import org.openrewrite.java.tree.J;
 import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 
@@ -31,6 +34,7 @@ import java.util.List;
 import static org.openrewrite.gradle.Assertions.*;
 import static org.openrewrite.gradle.toolingapi.Assertions.withToolingApi;
 import static org.openrewrite.properties.Assertions.properties;
+import static org.openrewrite.test.RewriteTest.toRecipe;
 
 class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
 
@@ -52,7 +56,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -62,14 +66,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -86,7 +90,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   compileOnly 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'org.openrewrite:rewrite-java:7.0.0'
@@ -97,7 +101,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       runtimeOnly('com.fasterxml.jackson.core:jackson-core:2.12.5') {
@@ -107,7 +111,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   compileOnly 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -123,38 +127,38 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             spec.recipe(new UpgradeTransitiveDependencyVersion(
               "com.thoughtworks.xstream", "xstream", "1.4.21", null, null, null)),
           buildGradle(
-            String.format("""
+            """
               plugins {
                   id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       %1$s 'com.thoughtworks.xstream:xstream:1.4.17'
                   }
               }
-              
+
               dependencies {
                   %1$s 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
               }
-              """, configurationName),
-            String.format("""
+              """.formatted(configurationName),
+            """
               plugins {
                   id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       %1$s 'com.thoughtworks.xstream:xstream:1.4.21'
                   }
               }
-              
+
               dependencies {
                   %1$s 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
               }
-              """, configurationName)
+              """.formatted(configurationName)
           )
         );
     }
@@ -184,7 +188,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   constraints {
                       compileOnly('org.apache.commons:commons-lang3:3.14.0')
                   }
-              
+
                   compileOnly 'org.apache.activemq:artemis-jakarta-server:2.28.0'
               }
               """
@@ -202,7 +206,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               }
               configurations.create("foo")
               repositories { mavenCentral() }
-              
+
               dependencies {
                   foo 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -213,14 +217,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               }
               configurations.create("foo")
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       foo('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   foo 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -242,7 +246,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   }
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   foo 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -260,7 +264,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
@@ -271,14 +275,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
               }
@@ -296,7 +300,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
@@ -307,14 +311,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
               }
@@ -333,7 +337,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'ear'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
@@ -346,7 +350,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'ear'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       earlib('com.fasterxml.jackson.core:jackson-core:2.12.5') {
@@ -356,7 +360,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
                   earlib 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
@@ -373,28 +377,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.0') {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -402,40 +406,40 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
     @Disabled("String interpolation with inline properties is not yet supported")
+    @Test
     void updateConstraintGStringInterpolation() {
         rewriteRun(
           buildGradle(
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
-              def jacksonCoreVersion = "2.12.0"
-              
+
+              def jacksonVersion = "2.12.0"
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
-              def jacksonCoreVersion = "2.12.5"
-              
+
+              def jacksonVersion = "2.12.5"
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -448,10 +452,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         rewriteRun(
           properties(
             """
-              jacksonCoreVersion=2.12.0
+              jacksonVersion=2.12.0
               """,
             """
-              jacksonCoreVersion=2.12.5
+              jacksonVersion=2.12.5
               """,
             spec -> spec.path("gradle.properties")
           ),
@@ -459,28 +463,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -493,10 +497,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         rewriteRun(
           properties(
             """
-              jacksonCoreVersion=2.12.0
+              jacksonVersion=2.12.0
               """,
             """
-              jacksonCoreVersion=2.12.5
+              jacksonVersion=2.12.5
               """,
             spec -> spec.path("gradle.properties")
           ),
@@ -504,28 +508,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonCoreVersion, {
+                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonVersion, {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonCoreVersion, {
+                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonVersion, {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -538,10 +542,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         rewriteRun(
           properties(
             """
-              jacksonCoreVersion=2.12.0
+              jacksonVersion=2.12.0
               """,
             """
-              jacksonCoreVersion=2.12.5
+              jacksonVersion=2.12.5
               """,
             spec -> spec.path("gradle.properties")
           ),
@@ -551,15 +555,15 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 `java-library`
               }
               repositories { mavenCentral() }
-              
-              val jacksonCoreVersion: String by project
+
+              val jacksonVersion: String by project
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because("some reason")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """,
@@ -568,15 +572,15 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 `java-library`
               }
               repositories { mavenCentral() }
-              
-              val jacksonCoreVersion: String by project
+
+              val jacksonVersion: String by project
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because("CVE-2024-BAD")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """
@@ -591,21 +595,21 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("org.openrewrite:rewrite-core:7.0.0")
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.0')
                       implementation("org.openrewrite:rewrite-xml:7.0.0")
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("org.openrewrite:rewrite-core:7.0.0")
@@ -614,7 +618,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                       }
                       implementation("org.openrewrite:rewrite-xml:7.0.0")
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -629,10 +633,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                   }
               }
@@ -640,10 +644,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -662,10 +666,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'ear' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   earlib 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                   }
               }
@@ -673,10 +677,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'ear' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   earlib 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       earlib('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -695,10 +699,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core') {
                           because 'security'
@@ -712,10 +716,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -737,7 +741,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               configurations.earlib.extendsFrom configurations.deploy
               dependencies {
                   earlib 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                   }
               }
@@ -748,7 +752,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               configurations.earlib.extendsFrom configurations.deploy
               dependencies {
                   earlib 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       earlib('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -769,7 +773,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               repositories { mavenCentral() }
               dependencies {
                   deploy 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                   }
               }
@@ -778,8 +782,8 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4228")
+    @Test
     void constraintDoesNotGetAddedInsideConstraint() {
         rewriteRun(
           spec -> spec
@@ -795,7 +799,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               }
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation("org.apache.logging.log4j:log4j-core") {
                           version {
@@ -815,7 +819,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               }
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -860,7 +864,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   constraints {
                       pitest('org.apache.commons:commons-lang3:3.14.0')
                   }
-              
+
                   testImplementation 'org.apache.activemq:artemis-jakarta-server:2.28.0'
               }
               """
@@ -896,7 +900,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                       pitest('org.apache.commons:commons-lang3:3.14.0')
                       testImplementation('org.apache.commons:commons-lang3:3.14.0')
                   }
-              
+
                   testImplementation 'org.apache.activemq:artemis-jakarta-server:2.28.0'
               }
               """
@@ -914,9 +918,9 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   id 'io.spring.dependency-management' version '1.1.5'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
@@ -934,9 +938,9 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                       }
                   }
               }
-              
+
               dependencies {
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -953,7 +957,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation('com.fasterxml.jackson.core:jackson-core:2.12.0')
                   implementation('com.fasterxml.jackson.core:jackson-databind:2.12.0')
@@ -972,7 +976,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 `java-library`
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
@@ -982,14 +986,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 `java-library`
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("com.fasterxml.jackson.core:jackson-core:2.12.5") {
                           because("CVE-2024-BAD")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """
@@ -1004,28 +1008,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id("java") }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("com.fasterxml.jackson.core:jackson-core:2.12.0") {
                           because("some reason")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """,
             """
               plugins { id("java") }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("com.fasterxml.jackson.core:jackson-core:2.12.5") {
                           because("CVE-2024-BAD")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """
@@ -1043,9 +1047,9 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   id("io.spring.dependency-management") version "1.1.5"
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """,
@@ -1063,123 +1067,11 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                       }
                   }
               }
-              
+
               dependencies {
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
-              """
-          )
-        );
-    }
-
-    @Test
-    void addConstraintUpdatesLockfile() {
-        rewriteRun(
-          buildGradle(
-            """
-              plugins {
-                id 'java'
-              }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.openrewrite:rewrite-java:7.0.0'
-              }
-              """,
-            """
-              plugins {
-                id 'java'
-              }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  constraints {
-                      implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
-                          because 'CVE-2024-BAD'
-                      }
-                  }
-              
-                  implementation 'org.openrewrite:rewrite-java:7.0.0'
-              }
-              """
-          ),
-          lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.dataformat:jackson-dataformat-smile:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-kotlin:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.ibm.icu:icu4j:61.1=runtimeClasspath,testRuntimeClasspath
-              commons-lang:commons-lang:2.6=runtimeClasspath,testRuntimeClasspath
-              io.github.classgraph:classgraph:4.8.102=runtimeClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-core:1.6.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.abego.treelayout:org.abego.treelayout.core:1.0.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:ST4:4.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr-runtime:3.5.2=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4-runtime:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.glassfish:javax.json:1.0.4=runtimeClasspath,testRuntimeClasspath
-              org.hdrhistogram:HdrHistogram:2.1.12=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-reflect:1.4.21=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-common:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains:annotations:20.1.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.latencyutils:LatencyUtils:2.0.3=runtimeClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-core:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-java:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-analysis:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-tree:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-util:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm:9.1=runtimeClasspath,testRuntimeClasspath
-              org.yaml:snakeyaml:1.28=runtimeClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.dataformat:jackson-dataformat-smile:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-kotlin:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.ibm.icu:icu4j:61.1=runtimeClasspath,testRuntimeClasspath
-              commons-lang:commons-lang:2.6=runtimeClasspath,testRuntimeClasspath
-              io.github.classgraph:classgraph:4.8.102=runtimeClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-core:1.6.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.abego.treelayout:org.abego.treelayout.core:1.0.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:ST4:4.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr-runtime:3.5.2=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4-runtime:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.glassfish:javax.json:1.0.4=runtimeClasspath,testRuntimeClasspath
-              org.hdrhistogram:HdrHistogram:2.1.12=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-reflect:1.4.21=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-common:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains:annotations:20.1.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.latencyutils:LatencyUtils:2.0.3=runtimeClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-core:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-java:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-analysis:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-tree:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-util:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm:9.1=runtimeClasspath,testRuntimeClasspath
-              org.yaml:snakeyaml:1.28=runtimeClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
               """
           )
         );
@@ -1197,7 +1089,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -1207,14 +1099,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -1232,7 +1124,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.3.12'
               }
@@ -1242,15 +1134,82 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('org.apache.tomcat.embed:tomcat-embed-core:10.1.42')
                       implementation('org.apache.tomcat.embed:tomcat-embed-el:10.1.42')
                       implementation('org.apache.tomcat.embed:tomcat-embed-websocket:10.1.42')
                   }
-              
+
                   implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.3.12'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doesNotAddRedundantConstraintWhenImplementationAlreadyHasIt() {
+        rewriteRun(
+          spec -> spec
+            .recipe(new UpgradeTransitiveDependencyVersion(
+              "com.fasterxml.jackson.core", "jackson-databind", "2.12.5", null, null, List.of("testImplementation"))),
+          buildGradle(
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  constraints {
+                      implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+                  }
+
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+                  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void replacesTestImplementationConstraintWithImplementation() {
+        rewriteRun(
+          spec -> spec
+            .recipe(new UpgradeTransitiveDependencyVersion(
+              "com.fasterxml.jackson.core", "jackson-databind", "2.12.5", null, null, null)),
+          buildGradle(
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  constraints {
+                      testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+                  }
+
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+                  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+              }
+              """,
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  constraints {
+                      implementation('com.fasterxml.jackson.core:jackson-databind:2.12.5')
+                  }
+
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+                  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
               }
               """
           )
@@ -1264,28 +1223,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonCoreVersion}") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonVersion}") {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonCoreVersion}") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonVersion}") {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -1293,20 +1252,132 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
           settingsGradle(
             """
               gradle.ext {
-                  jacksonCoreVersion = '2.12.0'
+                  jacksonVersion = '2.12.0'
               }
               """,
             """
               gradle.ext {
-                  jacksonCoreVersion = '2.12.5'
+                  jacksonVersion = '2.12.5'
               }
               """
           )
         );
     }
 
-    @Value
+    @Test
+    void noChangesIfDependencyIsAlsoPresentOnProjectForVersionInSettings() {
+        rewriteRun(
+          buildGradle(
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  implementation "com.fasterxml.jackson.core:jackson-core:${gradle.jacksonVersion}"
+                  implementation "com.fasterxml.jackson.core:jackson-databind:${gradle.jacksonVersion}"
+              }
+              """
+          ),
+          settingsGradle(
+            """
+              gradle.ext {
+                  jacksonVersion = '2.12.0'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void upgradeDependencyVersionBeforeApplyingTheUpgradeTransitiveDependencyVersion() {
+        rewriteRun(
+          // We use an imperative recipe rather than a declarative recipeList, because in a declarative recipeList, all recipes perform their scanning phase first and only then perform their editing phase.
+          // In this test case, we want the UpgradeTransitiveDependencyVersion recipe to scan and edit based on the output of the first recipe’s changes,
+          // to reflect a recipe downstream that uses this kind of setup.
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public @Nullable J visit(@Nullable Tree tree, ExecutionContext ctx) {
+                  if (tree instanceof G.CompilationUnit) {
+                      // A recipe that updates an existing dependency in the Gradle build file.
+                      // That dependency itself declares the one targeted by UpgradeTransitiveDependencyVersion as a transitive dependency.
+                      // In this case, "org.openrewrite:rewrite-java" has "com.fasterxml.jackson.core:jackson-databind" as a transitive dependency.
+                      UpgradeDependencyVersion upgrade = new UpgradeDependencyVersion("org.openrewrite", "rewrite-java", "8.0.0", null);
+                      UpgradeDependencyVersion.DependencyVersionState acc = upgrade.getInitialValue(ctx);
+                      upgrade.getScanner(acc).visit(tree, ctx);
+                      tree = upgrade.getVisitor(acc).visit(tree, ctx);
+
+                      // Use the changed tree as input for a UpgradeTransitiveDependencyVersion run
+                      UpgradeTransitiveDependencyVersion upgradeTransitive = new UpgradeTransitiveDependencyVersion("com.fasterxml.jackson.core", "jackson-databind", "2.15.1", null, null, null);
+                      UpgradeTransitiveDependencyVersion.DependencyVersionState accTransitive2 = upgradeTransitive.getInitialValue(ctx);
+                      upgradeTransitive.getScanner(accTransitive2).visit(tree, ctx);
+                      tree = upgradeTransitive.getVisitor(accTransitive2).visit(tree, ctx);
+                  }
+                  return super.visit(tree, ctx);
+              }
+          })),
+          buildGradle(
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  constraints {
+                      implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.0'
+                  }
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+              }
+              """,
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  constraints {
+                      implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+                  }
+                  implementation 'org.openrewrite:rewrite-java:8.0.0'
+              }
+              """
+          )
+        );
+    }
+
+    /**
+     * This test verifies that the recipe correctly prevents downgrading transitive dependencies.
+     * <ul>
+     * <li>jackson-dataformat-xml:2.18.0 brings in jackson-databind:2.18.0 transitively.</li>
+     * <li>jackson-datatype-jsr310:2.15.3 brings in jackson-databind:2.15.3 transitively.</li>
+     * </ul>
+     *  When trying to "upgrade" to 2.15.0 (which would be a downgrade), the recipe should
+     *  make no changes to avoid downgrading the transitive dependency.
+     */
+    @Test
+    void doesNotDowngradeTransitiveDependencyVersion() {
+        rewriteRun(
+          spec -> spec.recipe(new UpgradeTransitiveDependencyVersion(
+            "com.fasterxml.jackson.core", "jackson-databind", "2.15.0", null, null, null)),
+          buildGradle(
+            """
+            plugins {
+                id 'java'
+            }
+            repositories { mavenCentral() }
+            
+            dependencies {
+                implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.18.0'
+                implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.3'
+            }
+            """
+          )
+        );
+    }
+
     @EqualsAndHashCode(callSuper = false)
+    @Value
     public static class ScanningAccumulatedUpgradeRecipe extends ScanningRecipe<UpgradeTransitiveDependencyVersion.DependencyVersionState> {
         @Override
         public String getDisplayName() {
@@ -1323,7 +1394,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
 
         @Override
         public UpgradeTransitiveDependencyVersion.DependencyVersionState getInitialValue(ExecutionContext ctx) {
-            return new UpgradeTransitiveDependencyVersion.DependencyVersionState("com.fasterxml*", "jackson-core");
+            return new UpgradeTransitiveDependencyVersion.DependencyVersionState();
         }
 
         @Override
